--- a/AudioSearchQT/audiorecorder.ui
+++ b/AudioSearchQT/audiorecorder.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>AudioSearchQT</string>
+   <string>SoundSeek</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout_2">
